# bengali_speech_recognition

./: .gitignore  README.md  pyproject.toml
asr/: utils.py
asr/datasets/: __init__.py  audio_dataset_dataloader.py  base_dataloader.py  base_dataloaders.py  common.py  load_audios_and_labels.py
asr/losses/: __init__.py  ctc_loss.py
asr/metrics/: __init__.py  word_error_rate.py
asr/models/: __init__.py  ctc_decoder.py  deep_speech_2.py
asr/optimizers/: __init__.py
asr/schedulers/: __init__.py  warmup_cosine_scheduler.py
configs/: deep_speech.yaml
docker/: run_container.sh
tools/: train.py
